Update social media links and token information in index.html

--- a/index.html
+++ b/index.html
@@ -729,16 +729,16 @@
                 </a>
 
                 <div class="social-links">
-                    <a href="https://twitter.com/LIFTcoin" class="social-link" target="_blank">
+                    <a href="https://x.com/lifttribe" class="social-link" target="_blank">
                         <i class="fab fa-twitter"></i>
                     </a>
-                    <a href="https://t.me/LIFTcommunity" class="social-link" target="_blank">
+                    <a href="https://t.me/shbsbbkoz" class="social-link" target="_blank">
                         <i class="fab fa-telegram"></i>
                     </a>
-                    <a href="https://discord.gg/lift" class="social-link" target="_blank">
+                    <a href="https://discord.gg/lifttribe" class="social-link" target="_blank">
                         <i class="fab fa-discord"></i>
                     </a>
-                    <a href="https://dexscreener.com/solana/znxMmkt6jVrHHD1nuXBQr5bYbUTQM2gThENmEm9pump" class="social-link" target="_blank">
+                    <a href="https://ave.ai/token/znxMmkt6jVrHHD1nuXBQr5bYbUTQM2gThENmEm9pump-solana?from=Home" class="social-link" target="_blank">
                         <i class="fas fa-chart-line"></i>
                     </a>
                 </div>
@@ -781,12 +781,12 @@
                 <div class="token-card">
                     <i class="fas fa-fire"></i>
                     <h3>Burned</h3>
-                    <p>50% of supply burned at launch</p>
+                    <p>- % </p>
                 </div>
                 <div class="token-card">
                     <i class="fas fa-lock"></i>
                     <h3>Liquidity</h3>
-                    <p>100% locked for 1 year</p>
+                    <p>- % </p>
                 </div>
                 <div class="token-card">
                     <i class="fas fa-hand-holding-heart"></i>
@@ -876,10 +876,10 @@
                     <h3>$LIFT</h3>
                     <p>The meme coin for the broken, the healing, the hopeful. We rise together.</p>
                     <div class="social-links" style="justify-content: flex-start; margin-top: 1rem;">
-                        <a href="https://twitter.com/LIFTcoin" class="social-link" style="width: 40px; height: 40px; font-size: 1rem;" target="_blank">
+                        <a href="https://x.com/lifttribe" class="social-link" style="width: 40px; height: 40px; font-size: 1rem;" target="_blank">
                             <i class="fab fa-twitter"></i>
                         </a>
-                        <a href="https://t.me/LIFTcommunity" class="social-link" style="width: 40px; height: 40px; font-size: 1rem;" target="_blank">
+                        <a href="https://t.me/shbsbbkoz" class="social-link" style="width: 40px; height: 40px; font-size: 1rem;" target="_blank">
                             <i class="fab fa-telegram"></i>
                         </a>
                         <a href="https://discord.gg/lift" class="social-link" style="width: 40px; height: 40px; font-size: 1rem;" target="_blank">
@@ -901,7 +901,7 @@
                     <h3>Resources</h3>
                     <ul class="footer-links">
                         <li><a href="https://jup.ag/swap/SOL-LIFT_znxMmkt6jVrHHD1nuXBQr5bYbUTQM2gThENmEm9pump" target="_blank">Buy $LIFT</a></li>
-                        <li><a href="https://dexscreener.com/solana/znxMmkt6jVrHHD1nuXBQr5bYbUTQM2gThENmEm9pump" target="_blank">Chart</a></li>
+                        <li><a href="https://ave.ai/token/znxMmkt6jVrHHD1nuXBQr5bYbUTQM2gThENmEm9pump-solana?from=Home" target="_blank">Chart</a></li>
                         <li><a href="#" target="_blank">Whitepaper</a></li>
                         <li><a href="#" target="_blank">FAQ</a></li>
                     </ul>
