Refactor code structure for improved readability and maintainability

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>$LIFT - Rise Together | Solana Meme Coin</title>
+    <link rel="icon" href="images/favicon.jpg" type="image/jpg">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@700&family=Kanit:wght@400;600;800&display=swap" rel="stylesheet">
     <style>
@@ -853,15 +854,15 @@
             
             <div class="community-stats">
                 <div class="stat-item">
-                    <div class="stat-number">10K+</div>
+                    <div class="stat-number">-</div>
                     <div class="stat-label">Holders</div>
                 </div>
                 <div class="stat-item">
-                    <div class="stat-number">50K+</div>
+                    <div class="stat-number">-</div>
                     <div class="stat-label">Twitter Followers</div>
                 </div>
                 <div class="stat-item">
-                    <div class="stat-number">5K+</div>
+                    <div class="stat-number">-</div>
                     <div class="stat-label">Telegram Members</div>
                 </div>
             </div>
